src/App.css
* {
	scrollbar-width: none;
}
*::-webkit-scrollbar {
	width: 0;
	height: 0;
}

.container {
	height: 100vh;
	border-radius: 8px;
	overflow: hidden;
	border: 2px solid #1f2121;
}

.chat-box {
	position: absolute;
	bottom: 10px;
	padding-inline: 5px;
	width: 100%;
	color: aliceblue;

	&:hover {
		cursor: default;
	}

	& > div {
		display: flex;
		align-items: center;
		gap: 2px;
		margin-bottom: 5px;
	}
}

.titlebar {
	border-radius: 8px 8px 0px 0px;
	overflow: hidden;
	height: 30px;
	background: #1f2121;
	user-select: none;
	display: grid;
	grid-template-columns: auto max-content;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
}
.titlebar > .controls {
	display: flex;

	& > div {
		width: 30px;
		display: grid;
		place-items: center;
	}
}
.titlebar button {
	padding: 0;
	margin: 0;

	width: 15px;
	height: 15px;
	background-color: rgb(72, 72, 72);
	border-radius: 100%;

	&:hover {
		background-color: rgb(255, 68, 68);
		transition: all ease 100ms;
	}
}

